[project]
name = "fadtk"
version = "1.1.0"
description = "A simple and standardized library for Frechet Audio Distance calculation."
authors = [{ name = "Azalea", email = "me@hydev.org" }]
requires-python = ">=3.10,<=3.13"
readme = "README.md"
dependencies = [
    "numpy<2",
    "pandas>=2.0.3,<3",
    "scipy>=1.11.2,<2",
    "hypy-utils>=1.0.19,<2",
    "soundfile>=0.12.1,<1",
    "wheel>=0.41.1,<1",
    "librosa>=0.10.1,<1",
    "encodec>=0.1.1,<1",
    "transformers>=4.30.0,<5",
    "laion-clap>=1.1.6,<2",
    "nnaudio>=0.3.2,<1",
    "torch>=2.3.0,<3",
    "resampy",
    "llvmlite>=0.44",
    "torchvision>=0.22.0",
    "msclap>=1.3.4",
    "audioread>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/Microsoft/fadtk"
Repository = "https://github.com/Microsoft/fadtk"

[project.scripts]
fadtk = "fadtk.__main__:main"
fadtk-embeds = "fadtk.embeds.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
